--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,17 @@ body {
   background-color: #FFFFFF;
   color: #000000;
   font-size: 1em;
+  line-height: 120%
 }
 
 h1 {
   font-size: 2em;
-  line-height: 75%;
+  line-height: 200%;
 }
 
 p {
   font-size: 1em;
-  line-height: 75%;
+  line-height: 120%;
 }
 
 nav {
