--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,17 @@ body {
   background-color: #FFFFFF;
   color: #000000;
   font-size: 1em;
-  line-height: 120%
+  line-height: 1.2;
 }
 
 h1 {
   font-size: 2em;
-  line-height: 200%;
+  line-height: 2;
 }
 
 p {
   font-size: 1em;
-  line-height: 120%;
+  line-height: 1.2;
 }
 
 nav {
