--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body {
   background-color: #FFFFFF;
   color: #000000;
-  font-size: 1em;
-  line-height: 1.2;
+  font-size: 12px;
+  line-height: 1;
 }
 
 h1 {
