--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,13 @@ body {
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 2rem;
   line-height: 2;
 }
 
 p {
-  font-size: 1em;
-  line-height: 1.2;
+  font-size: 1rem;
+  line-height: 1.5;
 }
 
 nav {
