--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,17 @@ h1 {
 }
 
 h3 {
-  font-size: 2em;
+  font-size: 1rem;
   line-height: 1.5;
 }
 
 p {
   font-size: 1rem;
+  line-height: 1.5;
+}
+
+.author {
+  font-size: 16px;
   line-height: 1.5;
 }
 
